Req4-Alt Score th and td overflow fix

--- a/webapp/src/main/webapp/src/styles.less
+++ b/webapp/src/main/webapp/src/styles.less
@@ -2129,6 +2129,7 @@ fieldset.marginLeft50 {
 @agg-SchoolYear-width: 82px;
 @agg-assessmentLabel-width: 225px;
 @agg-studentsTested-width: 75px;
+@agg-altScore-width: 150px;
 
 .rdw-scrollable-table {
   table,
@@ -2155,6 +2156,9 @@ fieldset.marginLeft50 {
           }
           &.aggregate-report-schoolYear {
             width: @agg-SchoolYear-width;
+          }
+          &.aggregate-report-altScore {
+            width: @agg-altScore-width;
           }
           &.aggregate-report-dimension {
             width: @agg-dimension-width;
@@ -2193,7 +2197,9 @@ fieldset.marginLeft50 {
             text-align: left;
             overflow: hidden;
           }
-
+          &.aggregate-report-altScore {
+            width: @agg-altScore-width;
+          }
           &.aggregate-report-assessmentGrade {
             width: @agg-assessmentGrade-width;
           }
